--- a/service/service_cms/src/main/resources/application.properties
+++ b/service/service_cms/src/main/resources/application.properties
@@ -1,32 +1,27 @@
-server.port=8001
-spring.application.name=com.ssj.service-edu
-spring.profiles.active=dev
 
+server.port=8004
+
+spring.application.name=service-cms
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/guli?serverTimezone=GMT%2B8
 spring.datasource.username=root
 spring.datasource.password=root
 
+
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=GMT+8
 
-logging.level.root=DEBUG
-mybatis-plus.mapper-locations=classpath:com/ssj/eduservice/mapper/xml/*.xml
 
-spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
+mybatis-plus.mapper-locations=classpath:com/ssj/educms/mapper/xml/*.xml
+mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
-feign.hystrix.enabled=true
 
-hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=6000
-
-spring.main.allow-circular-references=true
 spring.redis.host=49.235.85.235
 spring.redis.port=6379
 spring.redis.database= 0
 spring.redis.timeout=1800000
-#
+
 spring.redis.lettuce.pool.max-active=20
 spring.redis.lettuce.pool.max-wait=-1
-#
 spring.redis.lettuce.pool.max-idle=5
 spring.redis.lettuce.pool.min-idle=0
